SF Primes/src/objects/IMP_DataTableObjectSetting__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This controls the object fieldset setting</description>
    <fields>
        <fullName>DataTableColumnFieldsetName__c</fullName>
        <label>DataTable Column Fieldset Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DataTableFilterFieldsetName__c</fullName>
        <description>This fieldset will be used by the data table component to build the filter criteria section and the actual filtering of the records. NOTE: only editable fields are allowed to be added on this fieldset.</description>
        <inlineHelpText>This fieldset will be used by the data table component to build the filter criteria section and the actual filtering of the records. NOTE: only editable fields are allowed to be added on this fieldset.</inlineHelpText>
        <label>DataTable Filter Fieldset Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DataTableSortingAndDirection__c</fullName>
        <label>DataTable Sorting And Direction</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DataTableWhereClause__c</fullName>
        <label>DataTable Where Clause</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SObjectLabelName__c</fullName>
        <description>Label Name of the object that will be label the data table.</description>
        <inlineHelpText>Label Name of the object that will be label the data table.</inlineHelpText>
        <label>SObject Label Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>IMP_DataTableObjectSetting</label>
</CustomObject>